--- a/app/assets/new-Manage-kpi.html
+++ b/app/assets/new-Manage-kpi.html
@@ -165,7 +165,7 @@
             <h3>Next Step</h3>
             <p>After creating kpi,you should create department and user,
                 then assign kpis to user in department</p>
-            <a class="btn btn-primary next-manage-department-btn" >Manage Department</a>
+            <a class="btn btn-primary " >管理部门</a>
         </section>
     </aside>
 </div>
