--- a/app/assets/new-Kpi-entry.html
+++ b/app/assets/new-Kpi-entry.html
@@ -29,38 +29,47 @@
             <ul>
                 <li><a>
                     <span>Get Started</span>
-                    <span class="nav-get-started"></span>
-                </a></li>
-                <li><a>
-                    <span>DashBoard</span>
-                    <span class="nav-dash-board"></span>
-                </a></li>
-                <li><a href="new-Analytics.html">
-                    <span>Analytics</span>
-                    <span class="nav-analytics"></span>
-                </a></li>
-                <li><a>
-                    <span>Reports</span>
-                    <span class='nav-report'></span>
                 </a></li>
                 <li class="relative">
                     <a>
                         <span>Manage</span>
-                        <span class='nav-manage'></span>
                     </a>
                     <ul class="nav-manage-sub">
                         <li><a>KPIs</a></li>
+                        <li><a>Department</a></li>
                         <li><a>Users</a></li>
                         <li><a>Views</a></li>
                         <li><a>Billings</a></li>
                     </ul>
                 </li>
+                <li class="active"><a>
+                    <span>DashBoard</span>
+                </a></li>
+                <li><a href="new-Analytics.html">
+                    <span>Analytics</span>
+                </a></li>
+                <li><a>
+                    <span>Reports</span>
+                </a></li>
+                <li><a>
+                    <span>&nbsp;</span>
+                </a></li>
                 <li><a>
                     <span>Entry KPIs</span>
-                    <span class="nav-entry-kpi"></span>
                 </a></li>
             </ul>
         </nav>
+        <ul class="nav-user-part">
+            <li>
+                <i class="icon-user"></i>
+            </li>
+            <li class='empty'>
+                <span>&nbsp;</span>
+            </li>
+            <li>
+                <a>Log Out</a>
+            </li>
+        </ul>
     </header>
 
 
