--- a/app/assets/new-Dashboard-add.html
+++ b/app/assets/new-Dashboard-add.html
@@ -75,7 +75,7 @@
     <div class="dashboard-add-sub-menu" id="dashboard-add-sub-menu">
         <ul>
             <li>
-                <a class="icon-arrow-left"></a>
+                <a class="icon-arrow-left"> Back</a>
             </li>
             <li class="active">
                 <a>Custom Add</a>
