--- a/app/assets/new-Dashboard.html
+++ b/app/assets/new-Dashboard.html
@@ -79,7 +79,7 @@
     <div style="display:table;width:100%;table-layout:fixed;height:100%;margin-top:-71px;position:absolute">
         <div class="content-left-main" name="dashboard" id="content-left-main">
             <div style="width:auto;height:71px;"></div>
-            <div class="left-content-title" id="left-content-title">
+            <div class="left-content-title" id="left-content-title" name="dashboard">
                 <p id="current-group-item" class="current-group-item"></p>
                 <i class="icon-edit current-group-item-edit" id="current-group-item-edit"></i>
                 <div class="content-right-nav-add-block" name="left-content" id="content-left-content-edit-block">
