--- a/app/assets/new-Dashboard.html
+++ b/app/assets/new-Dashboard.html
@@ -14,7 +14,8 @@
     <link href="stylesheets/Dashboard.css" rel="stylesheet">
     <link href="stylesheets/Dashboard-add.css" rel="stylesheet">
     <link href="stylesheets/2_column_right_nav.css" rel="stylesheet">
-
+    <link href="stylesheets/Analytic-main.css" rel="stylesheet">
+    <link href="stylesheets/tipsy.css" rel="stylesheet">
     <title>if kpi</title>
 </head>
 <body>
@@ -91,11 +92,6 @@
             <div class="dashboard-content" id="dashboard-content">
                 <div class="gridster" >
                     <ul class="dashBoard-show" id="dashBoard-show">
-                          <!--<li>asdsadsdaad</li>-->
-                        <!--<li>asdsadsdaad</li>-->
-                        <!--<li>asdsadsdaad</li>-->
-                        <!--<li>asdsadsdaad</li>-->
-                        <!--<li>asdsadsdaad</li>-->
                     </ul>
                 </div>
             </div>
@@ -130,7 +126,7 @@
                 <h3>Add DashBoard</h3>
                 <p>Creating a dashboard of your favourite type,then put it
                     to one of the dashboard group item for long-term observation</p>
-                <a class="btn btn-primary">Add Now</a>
+                <a class="btn btn-primary" id="add-dashboard-show">Add Now</a>
             </section>
             <section class="solid">
                 <h3>Full Size</h3>
@@ -141,14 +137,149 @@
             </section>
 
         </aside>
-
-
     </div>
 
 
 
 
 
+    <div class="dashboard-add-wrap" id="dashboard-add-wrap">
+       <div class="dashboard-add-inner" id="dashboard-add-inner">
+
+           <div class="dashboard-add-sub-menu" id="dashboard-add-sub-menu">
+               <ul>
+                   <li>
+
+                   </li>
+                   <li class="active">
+                       <a>Custom Add</a>
+                   </li>
+                   <li>
+                       <a>Template Add</a>
+                   </li>
+               </ul>
+               <a class="icon-remove" id="close-add-dashboard"> Close</a>
+           </div>
+
+
+
+           <aside class="content-right-nav" name='dashboard-add' >
+                   <section class="solid dashboard-add-name">
+                       <h3>Add DashBoard Name</h3>
+                       <p>Give the dashboard being created a proper name</p>
+                       <input type='text' placeholder="Dashboard name" id="dashboard-name-input"/>
+                   </section>
+                   <section class="solid dashboard-add-type">
+                       <h3>Choose A Type</h3>
+                       <ul id="db-add-type">
+                           <li class="active" type="line"></li>
+                           <li type="column"></li>
+                           <li type="pie"></li>
+                           <li type="scatter"></li>
+                       </ul>
+                   </section>
+                   <section class="solid">
+                       <h3>Create Content</h3>
+                       <p>Add one or more series to form
+                           your special dashboard</p>
+                       <ul class="db-add-kpi-list" id="db-add-kpi-list">
+                       </ul>
+                       <a class="btn btn-primary" id="add-one-series">Add one series</a>
+                   </section>
+                   <section class="solid">
+                       <h3>Select DashBoard Group</h3>
+                       <p>Select a dashboard group to put your dashboard</p>
+                       <div class="dashboard-add-select-div">
+                           <select data-placehoder="Group" style="width:140px;" class="chosen-select" id="dashboard-group-name">
+                               <option ></option>
+                               <option value="group1">entity1</option>
+                               <option value="group2">entity2</option>
+                               <option value="group3">entity3</option>
+                           </select>
+                       </div>
+                   </section>
+                   <section class="solid">
+                       <h3>Finish</h3>
+                       <p>Publish your dashboard since you have done</p>
+                       <a class="btn btn-primary" id="add-dashboard">Publish Now</a>
+                   </section>
+           </aside>
+
+               <div class="content-left-main" name="dashboard-add">
+                   <div class="left-content-title" name="dashboard-add" id="left-content-title-add">
+                       <div class="pull-left analytics-condition-choose" name="dashboard-add">
+                           <div class="index-condition-group">
+                               <select data-placeholder="Entity *" style="width:120px;" class="chosen-select"
+                                       title="analy-entity-select" id="chart-group">
+                                   <option value="group1">entity1</option>
+                                   <option value="group2">entity2</option>
+                                   <option value="group3">entity3</option>
+                               </select>
+                               <select data-placeholder="Kpi *" style="width:150px;" class="chosen-select" title="analy-kpi-select"
+                                       id="chart-kpi" date-pick=false>
+                                   <option value=""> </option>
+                                   <option value="kpi1" interval="200">week</option>
+                                   <option value="kpi1" interval="90">hour</option>
+                                   <option value="kpi1" interval="100">day</option>
+                                   <option value="kpi2" interval="400">quarter</option>
+                                   <option value="kpi3" interval="300">month</option>
+                                   <option value="kpi3" interval="500">year</option>
+                                   <option value="kpi3" interval="">empty</option>
+                               </select>
+                               <select data-placeholder="View *" style="width:150px;" class="chosen-select" title="analy-view-select"
+                                       id="chart-view">
+                                   <option value="entity1">view1</option>
+                                   <option value="entity2">view2</option>
+                                   <option value="entity3">view3</option>
+                               </select>
+                           </div>
+                           <div class="index-condition-group">
+                               <input type="text" class="index-pick-date" placeholder="Begin Time *" id="analy-begin-time"
+                                      readonly=true/>
+                               <label class="index-date-extra-info"></label>
+                               <input type="text" class="index-pick-date" placeholder="End Time" id="analy-end-time"
+                                      readonly=true/>
+                               <label class="index-date-extra-info"></label>
+                           </div>
+                           <div class="index-condition-group" style="width:120px">
+                               <label class="analytics-radio-label">
+                                   <input type="radio" name="chartRadios" value="1" checked>
+                                   Total
+                               </label>
+                               <label class="analytics-radio-label">
+                                   <input type="radio" name="chartRadios" value="2">
+                                   Average
+                               </label>
+                           </div>
+                           <a class="btn btn-primary btn-normal pull-left" style="margin-top:14px" id="db-add-chart">Add</a>
+                       </div>
+                       <i class="icon-chevron-down analytic-control-condition-visible" id="analytic-control-condition-visible" state="close"> </i>
+                   </div>
+
+                   <div class="db-chart-body" id="db-chart-body">
+                       <div class="clearfix" id="db-chart-interval-alternate" my_height="28">
+                           <ul class="pull-right db-control-chart-interval-group">
+                               <li interval="90"><a>Hr</a></li>
+                               <li interval="100"><a>D</a></li>
+                               <li interval="200"><a>W</a></li>
+                               <li interval="300"><a>M</a></li>
+                               <li interval="400"><a>Qr</a></li>
+                               <li interval="500"><a>Y</a></li>
+                           </ul>
+                       </div>
+
+                       <div class="put-db-chart" name="dashboard-add" id="put-db-chart">
+                           <table class="dashboard-item-extra-info"></table>
+                           <div class="db-chart-container" id="chart-container"></div>
+                       </div>
+                   </div>
+
+               </div>
+
+
+
+       </div>
+    </div>
 
 
 
@@ -169,14 +300,17 @@
 <script src="javascripts/wayne-base.js"></script>
 <script src="javascripts/Template.js"></script>
 <script src="javascripts/brilliantech.base.js"></script>
+<script src="javascripts/jquery.tipsy.js"></script>
 <script src="javascripts/jquery.ba-resize.min.js"></script>
 <script src="javascripts/jquery.icheck.min.js"></script>
 <script src="javascripts/jquery.sortable.min.js"></script>
 <script src="javascripts/highcharts.js"></script>
+<script src="javascripts/highcharts-more.js"></script>
 <script src="javascripts/exporting.js"></script>
 <script src="javascripts/bootstrap-datepicker.js" charset="UTF-8"></script>
 <script src="javascripts/bootstrap-datetimepicker.min.js" charset="UTF-8"></script>
 <script src="javascripts/date_picker_template.js"></script>
+<script src="javascripts/dashboard_type_special.js"></script>
 <script src="javascripts/high_chart_template.js"></script>
 <script src="javascripts/Manage.js"></script>
 <script src="javascripts/Manage-left-menu.js"></script>
@@ -186,7 +320,7 @@
 <script>
     $(document).ready(function(){
         DASHBOARD.init();
-
+        DASHBOARD.add.init();
         right_nav_main.init();
     })
 </script>
