--- a/app/assets/new-Manage-user.html
+++ b/app/assets/new-Manage-user.html
@@ -276,21 +276,21 @@
             </div>
             <div id="assign-kpi-inner" class="assign-kpi-inner">
                 <ul class="left" id="assign-kpi-user-kpis">
-                    <li id="kpi1">
-                        <table>
-                            <tr>
-                                <td>KPI 1</td>
-                                <td><input type="text" kpi_id="kpi1" class="target_max"/></td>
-                                <td><input type="text" kpi_id="kpi1" class="target_min"/></td>
-                            </tr>
-                            <tr>
-                                <td>some description here</td>
-                                <td>Target Max</td>
-                                <td>Target Min</td>
-                            </tr>
-                        </table>
-                        <i class="icon-trash"></i>
-                    </li>
+                    <!--<li id="kpi1">-->
+                        <!--<table>-->
+                            <!--<tr>-->
+                                <!--<td>KPI 1</td>-->
+                                <!--<td><input type="text" kpi_id="kpi1" class="target_max"/></td>-->
+                                <!--<td><input type="text" kpi_id="kpi1" class="target_min"/></td>-->
+                            <!--</tr>-->
+                            <!--<tr>-->
+                                <!--<td>some description here</td>-->
+                                <!--<td>Target Max</td>-->
+                                <!--<td>Target Min</td>-->
+                            <!--</tr>-->
+                        <!--</table>-->
+                        <!--<i class="icon-trash"></i>-->
+                    <!--</li>-->
 
                 </ul>
             </div>
@@ -307,6 +307,7 @@
     <p></p>
 </div>
 <script src="javascripts/jquery-1.8.2.min.js"></script>
+<script src="javascripts/jquery.tipsy.js"></script>
 <script src="javascripts/chosen.jquery.min.js"></script>
 <script src="javascripts/wayne-base.js"></script>
 <script src="javascripts/Template.js"></script>
