--- a/app/assets/new-Dashboard.html
+++ b/app/assets/new-Dashboard.html
@@ -286,7 +286,12 @@
 
 
 
-
+    <div class="dashboard-content-full" id="dashboard-content-full">
+        <div class="gridster" >
+            <ul class="dashBoard-show" >
+            </ul>
+        </div>
+    </div>
 
 
 </article>
