prepare high stock

--- a/app/assets/new-Analytics.html
+++ b/app/assets/new-Analytics.html
@@ -237,6 +237,7 @@
 <script src="javascripts/date_picker_template.js"></script>
 <script src="javascripts/high_chart_template.js"></script>
 <script src="javascripts/Analytics_init.js"></script>
+<script src="javascripts/high_chart_template_analytic.js"></script>
 <script src="javascripts/brilliantech.base.js"></script>
 <script>
     $(document).ready(function () {
