--- a/app/assets/new-Analytics.html
+++ b/app/assets/new-Analytics.html
@@ -229,13 +229,12 @@
 <script src="javascripts/bootstrap-datepicker.js" charset="UTF-8"></script>
 <script src="javascripts/bootstrap-datetimepicker.min.js" charset="UTF-8"></script>
 <script src="javascripts/chosen.jquery.min.js"></script>
-<script src="javascripts/highcharts.js"></script>
+<script src="javascripts/highstock.js"></script>
 <script src="javascripts/exporting.js"></script>
 <script src="javascripts/wayne-base.js"></script>
 <script src="javascripts/jquery.icheck.min.js"></script>
 <script src="javascripts/Template.js"></script>
 <script src="javascripts/date_picker_template.js"></script>
-<script src="javascripts/high_chart_template.js"></script>
 <script src="javascripts/Analytics_init.js"></script>
 <script src="javascripts/high_chart_template_analytic.js"></script>
 <script src="javascripts/brilliantech.base.js"></script>
