--- a/app/assets/new-Analytics.html
+++ b/app/assets/new-Analytics.html
@@ -211,9 +211,9 @@
                     <td class="analytics-chart-column" type="column">
                         <p>Column</p>
                     </td>
-                    <td class="analytics-chart-pie" type="pie">
-                        <p>Pie</p>
-                    </td>
+                    <!--<td class="analytics-chart-pie" type="pie">-->
+                        <!--<p>Pie</p>-->
+                    <!--</td>-->
                     <td class="analytics-chart-scatter" type="scatter">
                         <p>Scatter</p>
                     </td>
