--- a/app/assets/new-Dashboard-add.html
+++ b/app/assets/new-Dashboard-add.html
@@ -234,6 +234,7 @@
 <script src="javascripts/2_column_right_nav.js"></script>
 <script src="javascripts/dashboard_type_special.js"></script>
 <script src="javascripts/jquery.tipsy.js"></script>
+<script src="javascripts/high_chart_theme.js"></script>
 <script>
     $(document).ready(function(){
         DASHBOARD.add.init();
