--- a/app/assets/new-Dashboard.html
+++ b/app/assets/new-Dashboard.html
@@ -322,6 +322,7 @@
 <script src="javascripts/Dashboard-init.js"></script>
 <script src="javascripts/Dashboard-add.js"></script>
 <script src="javascripts/2_column_right_nav.js"></script>
+<script src="javascripts/high_chart_theme.js"></script>
 <script>
     $(document).ready(function(){
         DASHBOARD.init();
