--- a/app/assets/new-Dashboard-add.html
+++ b/app/assets/new-Dashboard-add.html
@@ -219,7 +219,7 @@
 <script src="javascripts/jquery.ba-resize.min.js"></script>
 <script src="javascripts/jquery.icheck.min.js"></script>
 <script src="javascripts/jquery.sortable.min.js"></script>
-<script src="javascripts/highcharts.js"></script>
+<script src="javascripts/highstock.js"></script>
 <script src="javascripts/highcharts-more.js"></script>
 <script src="javascripts/exporting.js"></script>
 <script src="javascripts/bootstrap-datepicker.js" charset="UTF-8"></script>
