--- a/app/assets/new-index.html
+++ b/app/assets/new-index.html
@@ -13,6 +13,7 @@
     <link href="stylesheets/Manage-department.css" rel="stylesheet">
     <link href="stylesheets/2_column_right_nav.css" rel="stylesheet">
     <link href="stylesheets/Dashboard.css" rel="stylesheet">
+    <link href="stylesheets/index.css" rel="stylesheet">
     <title>if kpi</title>
 </head>
 <body>
@@ -74,9 +75,15 @@
         </ul>
     </header>
 
-    <div class="index-all">
-
-    </div>
+    <section class="index-welcome">
+       <div class="left-image"></div>
+       <div class="right-info">
+           <h2>WELCOME </h2>
+           <p>欢迎使用EPM</p>
+           <p><i class="icon-user"></i> superxiao21@sina.com</p>
+           <p><i class="icon-time"></i> 2013-04-15 20:00</p>
+       </div>
+    </section>
 
 
 
