--- a/app/assets/new-Log-in.html
+++ b/app/assets/new-Log-in.html
@@ -20,7 +20,7 @@
 
 
 
-<div>
+<div >
     <div class="login-bg">
         <div class="login-caption">
             <h3>IntelligentFactory <span style="color:#5496C2">EPM</span></h3>
@@ -33,8 +33,19 @@
             <a class="log-btn pull-left" id="sign-in" state="close">Sign in</a>
             <a class="log-btn pull-right" id="sign-up"  state="close">Sign up</a>
         </div>
+        <a class="login-select-language" id="login-select-language">
+            <span>中文</span>
+            <i class="icon-globe"></i>
+            <ul class="login-select-language-menu" id="login-select-language-menu">
+                <li>中文</li>
+                <li>English</li>
+            </ul>
+        </a>
     </div>
+
 </div>
+
+
 <form action="/user_sessions/"  method="post" class="signIn-block signShow-block clearfix" id="signIn-block" style="display:none">
     <h3 class="text-center">Sign in</h3>
     <dl>
