--- a/app/assets/new-index.html
+++ b/app/assets/new-index.html
@@ -66,6 +66,14 @@
             <li>
                 <i class="icon-user"></i>
             </li>
+            <li class="select-language" id="select-language">
+                <span>中文</span>
+                <i class="icon-caret-down"></i>
+                <ul class="menu-select-language" id="menu-select-language">
+                    <li>中文</li>
+                    <li>English</li>
+                </ul>
+            </li>
             <li class='empty'>
                 <span>&nbsp;</span>
             </li>
