--- a/app/assets/template.html
+++ b/app/assets/template.html
@@ -7,6 +7,7 @@
     <link href="stylesheets/font-awesome.min.css" rel="stylesheet">
     <link href="stylesheets/chosen.css" rel="stylesheet">
     <link href="stylesheets/aero.css" rel="stylesheet">
+    <link href="stylesheets/Dashboard.css" rel="stylesheet">
     <title>if kpi</title>
 </head>
 <body>
@@ -59,6 +60,14 @@
             </ul>
         </nav>
     </header>
+
+    <ul>
+        <li class="grister-logo" style="background:#222;width: 191.4px;height: 277px;border: 1px solid #DDDDDD;border-radius: 6px;box-shadow: 1px 1px 4px rgba(0, 0, 0, 0.6);padding: 0;">
+            <p class="full-size-label">asfhjkadskj</p>
+            <a class="btn full-size-btn">退出全屏</a>
+        </li>
+    </ul>
+
 </article>
 <div class="message-box" id="MessageBox">
     <p></p>
@@ -70,6 +79,6 @@
 <script src="javascripts/brilliantech.base.js"></script>
 <script src="javascripts/jquery.ba-resize.min.js"></script>
 <script src="javascripts/jquery.icheck.min.js"></script>
-<script src="javascripts/jquery.sortable.min.js"></script
+<script src="javascripts/jquery.sortable.min.js"></script>
 </body>
 </html>
