language and index

--- a/app/assets/new-Log-in.html
+++ b/app/assets/new-Log-in.html
@@ -29,18 +29,23 @@
         </div>
     </div>
     <div class="login-block">
-        <div class="login-operate clearfix">
-            <a class="log-btn pull-left" id="sign-in" state="close">Sign in</a>
-            <a class="log-btn pull-right" id="sign-up"  state="close">Sign up</a>
+        <div class="login-operate clearfix" id="login-operate">
+            <!--<a class="log-btn pull-left" id="sign-in" state="close">Sign in</a>-->
+            <!--<a class="log-btn pull-right" id="sign-up"  state="close">Sign up</a>-->
+            <a class="log-btn language-btn" >中文</a>
+            <a class="log-btn language-btn">English</a>
+            <a class="log-btn language-btn">Deutsch</a>
         </div>
-        <a class="login-select-language" id="login-select-language">
-            <span>中文</span>
-            <i class="icon-globe"></i>
-            <ul class="login-select-language-menu" id="login-select-language-menu">
-                <li>中文</li>
-                <li>English</li>
-            </ul>
-        </a>
+
+        <!--<a class="login-select-language" id="login-select-language">-->
+            <!--<span>中文</span>-->
+            <!--<i class="icon-globe"></i>-->
+            <!--<ul class="login-select-language-menu" id="login-select-language-menu">-->
+                <!--<li>中文</li>-->
+                <!--<li>English</li>-->
+            <!--</ul>-->
+        <!--</a>-->
+
     </div>
 
 </div>
