--- a/app/assets/new-Log-in.html
+++ b/app/assets/new-Log-in.html
@@ -20,7 +20,7 @@
 
 
 
-<div >
+<div class="wrap-main">
     <div class="login-bg">
         <div class="login-caption">
             <h3>IntelligentFactory <span style="color:#5496C2">EPM</span></h3>
