change full size logo

--- a/app/assets/template.html
+++ b/app/assets/template.html
@@ -17,7 +17,7 @@
     </div>
 
 </aside>
-<article class="wrap-main" id="wrap-main">
+<article class="wrap-main" id="wrap-main" style="background: -moz-radial-gradient(  #009bb5 10%, #0080a3 40%, #003a79 80%);">
     <header>
         <div class="user-portrait-background pull-left" state="close" id="user-portrait-background">
             <div class="user-portrait-brand"></div>
@@ -62,7 +62,7 @@
     </header>
 
     <ul>
-        <li class="grister-logo" style="background:#222;width: 191.4px;height: 277px;border: 1px solid #DDDDDD;border-radius: 6px;box-shadow: 1px 1px 4px rgba(0, 0, 0, 0.6);padding: 0;">
+        <li class="grister-logo" style="width: 191.4px;height: 277px;border-radius: 6px;box-shadow: 1px 1px 4px rgba(0, 0, 0, 0.6);padding: 0;">
             <p class="full-size-label">asfhjkadskj</p>
             <a class="btn full-size-btn">退出全屏</a>
         </li>
