change full size logo

--- a/app/assets/new-Dashboard.html
+++ b/app/assets/new-Dashboard.html
@@ -287,6 +287,10 @@
 
 
     <div class="dashboard-content-full" id="dashboard-content-full">
+        <div id="full-size-title" class="full-size-title">
+            <p class="full-size-label"></p>
+            <a id="full-size-btn" class="btn full-size-btn">退出全屏</a>
+        </div>
         <div class="gridster" >
             <ul class="dashBoard-show" >
             </ul>
