--- a/app/assets/new-Dashboard.html
+++ b/app/assets/new-Dashboard.html
@@ -53,9 +53,9 @@
                 <li><a href="new-Analytics.html">
                     <span>Analytics</span>
                 </a></li>
-                <li><a>
-                    <span>Reports</span>
-                </a></li>
+                <!--<li><a>-->
+                    <!--<span>Reports</span>-->
+                <!--</a></li>-->
                 <li><a>
                    <span>&nbsp;</span>
                 </a></li>
