--- a/app/assets/new-Analytics.html
+++ b/app/assets/new-Analytics.html
@@ -43,9 +43,9 @@
             <li><a href="new-Analytics.html">
                 <span>Analytics</span>
             </a></li>
-            <li><a>
-                <span>Reports</span>
-            </a></li>
+            <!--<li><a>-->
+                <!--<span>Reports</span>-->
+            <!--</a></li>-->
             <li><a>
                 <span>&nbsp;</span>
             </a></li>
