change kpii entry menu a & upload

--- a/app/assets/new-Kpi-entry.html
+++ b/app/assets/new-Kpi-entry.html
@@ -149,6 +149,7 @@
 
                 </div>
             </div>
+            <p class="upload-parsing" id="parsing-load">正在解析文件...</p>
             <div class="btn upload-finish" id="upload-kpi-finish">完成</div>
         </div>
     </div>
