--- a/app/assets/new-Manage-department.html
+++ b/app/assets/new-Manage-department.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="utf-8">
     <link href="stylesheets/wayne_sunny.css" rel="stylesheet">
-    <link href="stylesheets/_epm_base.css" rel="stylesheet">
+    <link href="stylesheets/_epm_base_wayne.css" rel="stylesheet">
     <link href="stylesheets/font-awesome.min.css" rel="stylesheet">
     <link href="stylesheets/chosen.css" rel="stylesheet">
-    <link href="stylesheets/aero.css" rel="stylesheet">
+    <link href="stylesheets/aero_wayne.css" rel="stylesheet">
     <link href="stylesheets/Manage.css" rel="stylesheet">
     <link href="stylesheets/Manage-kpi.css" rel="stylesheet">
     <link href="stylesheets/Manage-user.css" rel="stylesheet">
@@ -137,19 +137,24 @@
 
     </div>
 
-
-
-
-
-
-
-
-
 </article>
+
+<div class="modal-outer" >
+    <div class="modal-inner modal-department">
+        <i class="icon-remove" ></i>
+        <p class="title">新建部门</p>
+    </div>
+</div>
+
+
+
+
+
 <div class="message-box" id="MessageBox">
     <p></p>
 </div>
 <script src="javascripts/jquery-1.8.2.min.js"></script>
+<script src="javascripts/jquery.tipsy.js"></script>
 <script src="javascripts/chosen.jquery.min.js"></script>
 <script src="javascripts/wayne-base.js"></script>
 <script src="javascripts/Template.js"></script>
