--- a/app/assets/new-Log-in.html
+++ b/app/assets/new-Log-in.html
@@ -121,13 +121,13 @@
 </div>
 <script src="javascripts/jquery-1.8.2.min.js"></script>
 <script src="javascripts/chosen.jquery.min.js"></script>
-<script src="originJS/wayne-base.js"></script>
-<script src="originJS/Template.js"></script>
-<script src="originJS/brilliantech.base.js"></script>
+<script src="javascripts/wayne-base.js"></script>
+<script src="javascripts/Template.js"></script>
+<script src="javascripts/brilliantech.base.js"></script>
 <script src="javascripts/jquery.ba-resize.min.js"></script>
 <script src="javascripts/jquery.icheck.min.js"></script>
 <script src="javascripts/jquery.sortable.min.js"></script>
-<script src="originJS/Log.js"></script>
+<script src="javascripts/Log.js"></script>
 
 <script>
     $(document).ready(function(){
