--- a/app/assets/new-Analytics.html
+++ b/app/assets/new-Analytics.html
@@ -226,18 +226,18 @@
     <p></p>
 </div>
 <script src="javascripts/jquery-1.8.2.min.js"></script>
-<script src="originJS/bootstrap-datepicker.js" charset="UTF-8"></script>
+<script src="javascripts/bootstrap-datepicker.js" charset="UTF-8"></script>
 <script src="javascripts/bootstrap-datetimepicker.min.js" charset="UTF-8"></script>
 <script src="javascripts/chosen.jquery.min.js"></script>
 <script src="javascripts/highstock.js"></script>
 <script src="javascripts/exporting.js"></script>
-<script src="originJS/wayne-base.js"></script>
+<script src="javascripts/wayne-base.js"></script>
 <script src="javascripts/jquery.icheck.min.js"></script>
-<script src="originJS/Template.js"></script>
-<script src="originJS/date_picker_template.js"></script>
-<script src="originJS/Analytics_init.js"></script>
-<script src="originJS/high_chart_template_analytic.js"></script>
-<script src="originJS/brilliantech.base.js"></script>
+<script src="javascripts/Template.js"></script>
+<script src="javascripts/date_picker_template.js"></script>
+<script src="javascripts/Analytics_init.js"></script>
+<script src="javascripts/high_chart_template_analytic.js"></script>
+<script src="javascripts/brilliantech.base.js"></script>
 <script>
     $(document).ready(function () {
         init_analytics();
