--- a/app/assets/new-Manage-kpi.html
+++ b/app/assets/new-Manage-kpi.html
@@ -304,18 +304,18 @@
 
 <script src="javascripts/jquery-1.8.2.min.js"></script>
 <script src="javascripts/chosen.jquery.min.js"></script>
-<script src="originJS/wayne-base.js"></script>
-<script src="originJS/Template.js"></script>
-<script src="originJS/brilliantech.base.js"></script>
+<script src="javascripts/wayne-base.js"></script>
+<script src="javascripts/Template.js"></script>
+<script src="javascripts/brilliantech.base.js"></script>
 
 <script src="javascripts/jquery.ba-resize.min.js"></script>
 <script src="javascripts/jquery.icheck.min.js"></script>
 <script src="javascripts/jquery.sortable.min.js"></script>
-<script src="originJS/jquery.tipsy.js"></script>
+<script src="javascripts/jquery.tipsy.js"></script>
 
-<script src="originJS/Manage-left-menu.js"></script>
-<script src="originJS/Manage-right-list.js"></script>
-<script src="originJS/Manage.js"></script>
+<script src="javascripts/Manage-left-menu.js"></script>
+<script src="javascripts/Manage-right-list.js"></script>
+<script src="javascripts/Manage.js"></script>
 <script src="originJS/Manage-kpi.js"></script>
 
 <<script>
