--- a/app/assets/new-index.html
+++ b/app/assets/new-index.html
@@ -150,23 +150,23 @@
 </div>
 <script src="javascripts/jquery-1.8.2.min.js"></script>
 <script src="javascripts/chosen.jquery.min.js"></script>
-<script src="originJS/wayne-base.js"></script>
-<script src="originJS/Template.js"></script>
-<script src="originJS/brilliantech.base.js"></script>
+<script src="javascripts/wayne-base.js"></script>
+<script src="javascripts/Template.js"></script>
+<script src="javascripts/brilliantech.base.js"></script>
 <script src="javascripts/jquery.ba-resize.min.js"></script>
 <script src="javascripts/jquery.icheck.min.js"></script>
 <script src="javascripts/jquery.sortable.min.js"></script>
-<script src="originJS/Manage-left-menu.js"></script>
-<script src="originJS/Manage-right-list.js"></script>
-<script src="originJS/Manage.js"></script>
+<script src="javascripts/Manage-left-menu.js"></script>
+<script src="javascripts/Manage-right-list.js"></script>
+<script src="javascripts/Manage.js"></script>
 <script src="originJS/Manage-kpi.js"></script>
-<script src="originJS/Manage-user.js"></script>
-<script src="originJS/Manage-department.js"></script>
-<script src="originJS/2_column_right_nav.js"></script>
+<script src="javascripts/Manage-user.js"></script>
+<script src="javascripts/Manage-department.js"></script>
+<script src="javascripts/2_column_right_nav.js"></script>
 
-<script src="originJS/Index.js"></script>
+<script src="javascripts/Index.js"></script>
 <script src="javascripts/Chart.min.js"></script>
-<script src="originJS/Chart_generate.js"></script>
+<script src="javascripts/Chart_generate.js"></script>
 <script>
 
 </script>
