--- a/public/403.html
+++ b/public/403.html
@@ -19,7 +19,7 @@
 <body>
   <!-- This file lives in public/404.html -->
   <div class="dialog">
-    <h1>403</h1>
+    <h1> Sorry you don't have permission!</h1>
   </div>
 </body>
 </html>
