--- a/public/403.html
+++ b/public/403.html
@@ -1,25 +1,27 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>403</title>
-  <style type="text/css">
-    body { background-color: #fff; color: #666; text-align: center; font-family: arial, sans-serif; }
-    div.dialog {
-      width: 25em;
-      padding: 0 4em;
-      margin: 4em auto 0 auto;
-      border: 1px solid #ccc;
-      border-right-color: #999;
-      border-bottom-color: #999;
-    }
-    h1 { font-size: 100%; color: #f00; line-height: 1.5em; }
-  </style>
+    <title>403</title>
+    <style type="text/css">
+        body {
+            background-color: #daecee;
+        }
+
+        #error {
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            margin-top: -303px;
+            margin-left: -303px;
+        }
+    </style>
 </head>
 
 <body>
-  <!-- This file lives in public/404.html -->
-  <div class="dialog">
-    <h1> Sorry you don't have permission!</h1>
-  </div>
+<div id="error">
+    <a>
+        <img src="/assets/403.png" alt="403 Forbidden" id="error403-image">
+    </a>
+</div>
 </body>
 </html>
