--- a/app/assets/seaTest.html
+++ b/app/assets/seaTest.html
@@ -6,12 +6,12 @@
 </head>
 <body>
 <p id="wayne"></p>
-<script src="javascripts/sea-modules/seajs/sea.js" id="seajsnode"></script>
+<script src="./javascripts/sea-modules/seajs/2.3.0/dist/sea.js" id="seajsnode"></script>
 <script>
     seajs.config({
-        base:"./javascripts/sea-modules",
-        alias:{
-            "jquery":"jquery/jquery-1.8.2.min.js"
+        base:"./javascripts/sea-modules/",
+        alias: {
+            "jquery":"jquery/1.8.3/jquery.min.js"
         }
     });
     seajs.use("test/main");
