--- a/app/assets/seaTest.html
+++ b/app/assets/seaTest.html
@@ -11,7 +11,7 @@
     seajs.config({
         base:"./javascripts/sea-modules/",
         alias: {
-            "jquery":"jquery/1.8.3/jquery.min.js"
+            "jquery":"jquery/1.8.3/jquery"
         }
     });
     seajs.use("test/main");
